[gd_scene load_steps=20 format=2]

[ext_resource path="res://scripts/temple.gd" type="Script" id=1]
[ext_resource path="res://scenes/sounds.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/unlock.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/temple/temple.png" type="Texture" id=4]
[ext_resource path="res://assets/temple/arrow.png" type="Texture" id=5]
[ext_resource path="res://assets/UI/flame.png" type="Texture" id=6]
[ext_resource path="res://assets/pixel.png" type="Texture" id=7]
[ext_resource path="res://assets/temple/glow.png" type="Texture" id=8]
[ext_resource path="res://assets/temple/pendant.png" type="Texture" id=9]
[ext_resource path="res://assets/UI/fonts/GlacialIndifference-Italic.otf" type="DynamicFontData" id=10]
[ext_resource path="res://assets/UI/x.png" type="Texture" id=11]
[ext_resource path="res://assets/UI/crown.png" type="Texture" id=12]
[ext_resource path="res://assets/blood_wo.png" type="Texture" id=13]
[ext_resource path="res://scenes/shop.tscn" type="PackedScene" id=14]

[sub_resource type="CircleShape2D" id=1]
radius = 37.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 65, 65 )

[sub_resource type="DynamicFont" id=3]
size = 30
use_mipmaps = true
use_filter = true
extra_spacing_char = 2
font_data = ExtResource( 10 )

[sub_resource type="CircleShape2D" id=4]
radius = 25.0

[sub_resource type="CircleShape2D" id=5]
radius = 35.0

[node name="temple" type="Node2D"]
script = ExtResource( 1 )
Sounds = ExtResource( 2 )
Unlock = ExtResource( 3 )
Shop = ExtResource( 14 )

[node name="temple" type="Sprite" parent="."]
position = Vector2( 357, 233.898 )
z_index = 2
texture = ExtResource( 4 )

[node name="right" type="TouchScreenButton" parent="temple"]
position = Vector2( 150, 20 )
shape = SubResource( 1 )
shape_centered = false

[node name="Sprite" type="Sprite" parent="temple/right"]
scale = Vector2( 0.821875, 0.64375 )
texture = ExtResource( 5 )

[node name="left" type="TouchScreenButton" parent="temple"]
position = Vector2( -150, 20 )
shape = SubResource( 1 )
shape_centered = false

[node name="Sprite" type="Sprite" parent="temple/left"]
position = Vector2( 0.949997, 0 )
scale = Vector2( 0.821875, 0.64375 )
texture = ExtResource( 5 )
flip_h = true

[node name="choose" type="TouchScreenButton" parent="temple"]
position = Vector2( 2.3833, 23.4357 )
shape = SubResource( 2 )
shape_centered = false

[node name="icon" type="Sprite" parent="temple/choose"]
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 6 )

[node name="back" type="Sprite" parent="temple"]
modulate = Color( 0.764706, 0.764706, 0.764706, 1 )
show_behind_parent = true
position = Vector2( -0.411407, 22.5198 )
scale = Vector2( 146.699, 149.872 )
texture = ExtResource( 7 )

[node name="glow" type="Sprite" parent="temple"]
show_behind_parent = true
texture = ExtResource( 8 )

[node name="pendant" type="Sprite" parent="temple"]
modulate = Color( 0.92549, 0.92549, 0.87451, 1 )
texture = ExtResource( 9 )

[node name="icon" type="Sprite" parent="temple/pendant"]
position = Vector2( 0.277466, -92.6348 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 6 )

[node name="God" type="Label" parent="temple"]
margin_left = -100.0
margin_top = -185.0
margin_right = 100.0
margin_bottom = -148.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = SubResource( 3 )
text = "ARTEMIS"
align = 1

[node name="ability" type="Label" parent="temple"]
margin_left = -225.0
margin_top = 160.0
margin_right = 225.0
margin_bottom = 197.0
rect_min_size = Vector2( 450, 0 )
custom_fonts/font = SubResource( 3 )
text = "Helm of the Blacksmith"
align = 1

[node name="x" type="TouchScreenButton" parent="."]
position = Vector2( 35, 35 )
shape = SubResource( 4 )
shape_centered = false

[node name="sprite" type="Sprite" parent="x"]
self_modulate = Color( 0.882353, 0.882353, 0.882353, 1 )
position = Vector2( 0.297737, -0.148893 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 11 )

[node name="Sprite" type="Sprite" parent="x/sprite"]
modulate = Color( 0.168627, 0.168627, 0.168627, 1 )
show_behind_parent = true
scale = Vector2( 19, 19 )
texture = ExtResource( 13 )

[node name="shop" type="TouchScreenButton" parent="."]
position = Vector2( 672.527, 434.164 )
shape = SubResource( 5 )
shape_centered = false

[node name="Sprite" type="Sprite" parent="shop"]
position = Vector2( 0, -3 )
scale = Vector2( 0.6, 0.7 )
texture = ExtResource( 12 )

[node name="Sprite" type="Sprite" parent="shop/Sprite"]
modulate = Color( 0.168627, 0.168627, 0.168627, 1 )
show_behind_parent = true
position = Vector2( 0, 4.04065 )
scale = Vector2( 16, 14 )
texture = ExtResource( 13 )

[node name="filter" type="Sprite" parent="."]
modulate = Color( 0.207843, 0.207843, 0.207843, 0.392157 )
show_behind_parent = true
position = Vector2( 365.75, 239.4 )
scale = Vector2( 745.8, 495 )
texture = ExtResource( 7 )

[node name="unlockTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="pressed" from="temple/right" to="." method="_on_right_pressed"]
[connection signal="pressed" from="temple/left" to="." method="_on_left_pressed"]
[connection signal="pressed" from="temple/choose" to="." method="_on_choose_pressed"]
[connection signal="pressed" from="x" to="." method="_on_x_pressed"]
[connection signal="pressed" from="shop" to="." method="_on_shop_pressed"]
[connection signal="timeout" from="unlockTimer" to="." method="_on_unlockTimer_timeout"]
